--- a/exercise1/models/compl_model_table_bar.tex
+++ b/exercise1/models/compl_model_table_bar.tex
@@ -1,16 +1,15 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Wed Feb 14 17:58:54 2024
+% Mon Feb 19 18:21:02 2024
 \begin{tabular}{rrrrr}
   \hline
  & Estimate & Std. Error & t value & Pr($>$$|$t$|$) \\ 
   \hline
-(Intercept) & -68.0031 & 5.0067 & -13.58 & 0.0000 \\ 
-  Algorithmchain & 48.3330 & 4.5653 & 10.59 & 0.0000 \\ 
-  Algorithmdefault & 4.7424 & 4.5774 & 1.04 & 0.3002 \\ 
-  Algorithmlinear & 12.0579 & 4.6361 & 2.60 & 0.0093 \\ 
-  Allocationnode & 39.0153 & 3.9529 & 9.87 & 0.0000 \\ 
-  Allocationsocket & 63.3617 & 3.9943 & 15.86 & 0.0000 \\ 
-  Processes & 0.5054 & 0.0225 & 22.49 & 0.0000 \\ 
-  MessageSize & 0.0013 & 0.0027 & 0.46 & 0.6452 \\ 
+(Intercept) & -293.2244 & 11.7596 & -24.93 & 0.0000 \\ 
+  Algorithmdefault & 2.5873 & 11.0436 & 0.23 & 0.8148 \\ 
+  Algorithmlinear & 45.7123 & 11.0436 & 4.14 & 0.0000 \\ 
+  Algorithmring & 449.1283 & 11.0436 & 40.67 & 0.0000 \\ 
+  Allocationnode & 196.4844 & 9.5640 & 20.54 & 0.0000 \\ 
+  Allocationsocket & 178.5540 & 9.5640 & 18.67 & 0.0000 \\ 
+  Processes & 1.6650 & 0.0530 & 31.39 & 0.0000 \\ 
    \hline
 \end{tabular}
